--- a/templates/errorbase.html
+++ b/templates/errorbase.html
@@ -6,6 +6,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <!-- Bootstrap CSS -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+   <!-- Favicon -->
+   <link rel="shortcut icon" href="/static/img/favicon.png">
    <link rel="stylesheet" href="/static/css/error.css">
    <title>Error</title>
 </head>
