--- a/templates/home.html
+++ b/templates/home.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/static/img/favicon.png">
     <link rel="stylesheet" href="/static/CSS/styles.css">
     <title>Weather 69</title>
   </head>
   <body>
    <nav class="navbar navbar-expand-md navbar-light bg-trasparent my-3">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{{ url_for('home') }}">
            <img src="/static/img/logo.svg" alt="" class="brand-logo">
            weather<span class="navbar-brand navbar-brand-number">69</span>
         </a>
@@ -24,7 +26,7 @@
           </ul>
           <ul class="navbar-nav mb-2 mb-lg-0 text-center">
             <li class="nav-item px-md-3 login-btn py-0">
-              <a class="nav-link" href="#">Log In</a>
+              <a class="nav-link" href="{{ url_for('naError') }}">Log In</a>
             </li>
           </ul>
         </div>
